src/movement/snapshots/cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_4w.snap
---
source: src/movement/tests.rs
expression: movement
---
{
  "class": null,
  "destination": {
    "rank": "_3",
    "file": "C"
  }
}
